backend/api/tests/integration/image/snapshots/integration__image__recent__create_conflict.snap
---
source: tests/integration/image/recent.rs
expression: body
---
{
  "id": "8cca6f3a-c4bb-11eb-8edf-13c75672da8f",
  "library": "User",
  "last_used": "[timestamp]"
}
