backend/api/tests/integration/image/snapshots/integration__image__recent__list_with_limit.snap
---
source: tests/integration/image/recent.rs
expression: body
---
{
  "images": [
    {
      "id": "8cca6f3a-c4bb-11eb-8edf-13c75672da8f",
      "library": "User",
      "last_used": "2021-06-03T22:30:48.451362Z"
    },
    {
      "id": "8cca720a-c4bb-11eb-8edf-63da1d86939c",
      "library": "User",
      "last_used": "2021-06-03T22:30:47.451362Z"
    },
    {
      "id": "8cca719c-c4bb-11eb-8edf-f7accb638a15",
      "library": "User",
      "last_used": "2021-06-03T22:30:46.451362Z"
    }
  ]
}
