backend/api/tests/integration/image/snapshots/integration__image__recent__update-1.snap
---
source: tests/integration/image/recent.rs
expression: body
---
{
  "id": "8cca719c-c4bb-11eb-8edf-f7accb638a15",
  "library": "User",
  "last_used": "[timestamp]"
}
